now user can also delete fehrist row

--- a/src/assets/scss/_singlePage.scss
+++ b/src/assets/scss/_singlePage.scss
@@ -140,6 +140,12 @@
                                               }
                                             }
                                           }
+                                          span{
+                                            cursor: pointer;
+                                            font-size: 15px;
+                                            color: rgb(246, 124, 124);
+                                            padding-left: 10px;
+                                          }
                                         }
                               }
                               .add-table-field{
