--- a/src/assets/scss/frontend/_mainPage.scss
+++ b/src/assets/scss/frontend/_mainPage.scss
@@ -32,6 +32,9 @@
                                                   width: fit-content;
                                                   max-width: 100%;
                                                   word-wrap: wrap;
+                                                  font-family: "Jameel Noori Nastaleeq","JNNastaleeq" !important;
+                                                  font-size: 20px;
+                                                  font-style: bold;
                                         }
                               }
                               .profile{
