singleBook stylesheet added for dashboard

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
 @import './assets/scss/login';
 @import './assets/scss/header';
 @import './assets/scss/sidebar';
+@import './assets/scss/dashboardSingleBook';
 @import './assets/scss/content';
 @import './assets/scss/sidebarToggle';
 @import './assets/scss/popup';
