--- a/src/assets/scss/_editor.scss
+++ b/src/assets/scss/_editor.scss
@@ -41,6 +41,8 @@
 
         svg {
           font-size: 20px;
+          position: relative;
+          top: 5px;
           font-weight: 700;
         }
       }
