--- a/src/assets/scss/frontend/_allMatch.scss
+++ b/src/assets/scss/frontend/_allMatch.scss
@@ -23,7 +23,7 @@
 
                                         .img {
                                                   img {
-                                                            width: 150px;
+                                                            height: 170px;
                                                   }
                                         }
 
