--- a/src/assets/scss/frontend/_mainPage.scss
+++ b/src/assets/scss/frontend/_mainPage.scss
@@ -13,7 +13,8 @@
                     overflow: hidden;
                     .image{
                               img{
-                                        height: 400px;
+                                        width: 300px;
+                                        height: 500px;
                               }
                     }
                     .book-content{
