--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -72,12 +72,14 @@
         width: 100%;
         cursor: pointer;
         margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         svg {
           font-size: 20px;
           margin-right: 10px;
           position: relative;
-          top: 3px;
 
         }
       }
